<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/layout_toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreyLight"
            android:gravity="center"
            android:padding="@dimen/distance_25dp">

            <FrameLayout
                android:layout_width="@dimen/distance_120dp"
                android:layout_height="@dimen/distance_120dp"
                tools:ignore="UselessParent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ProgressBar
                    android:id="@+id/progress"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/distance_16dp"
            android:paddingTop="@dimen/distance_16dp"
            android:paddingEnd="@dimen/distance_16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/distance_4dp"
                android:paddingBottom="@dimen/distance_4dp">

                <TextView
                    android:id="@+id/tv_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/distance_5dp"
                    android:text="@string/label_name" />

                <TextView
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_full_name"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:padding="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGreyLight"
                    android:textStyle="bold" />

                <View
                    style="@style/horizontal_line"
                    android:layout_below="@+id/et_full_name"
                    android:layout_marginTop="@dimen/distance_6dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/distance_4dp"
                android:paddingBottom="@dimen/distance_4dp">

                <TextView
                    android:id="@+id/tv_email_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/distance_5dp"
                    android:text="@string/label_email" />

                <TextView
                    android:id="@+id/et_email_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_email_user"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:padding="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGreyLight"
                    android:textStyle="bold" />

                <View
                    style="@style/horizontal_line"
                    android:layout_below="@+id/et_email_user"
                    android:layout_marginTop="@dimen/distance_6dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/distance_4dp"
                android:paddingBottom="@dimen/distance_4dp">

                <TextView
                    android:id="@+id/tv_address_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/distance_5dp"
                    android:text="@string/label_address" />

                <TextView
                    android:id="@+id/et_address_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_address_user"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:padding="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGreyLight"
                    android:textStyle="bold" />

                <View
                    style="@style/horizontal_line"
                    android:layout_below="@+id/et_address_user"
                    android:layout_marginTop="@dimen/distance_6dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/distance_4dp"
                android:paddingBottom="@dimen/distance_4dp">

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/distance_5dp"
                    android:text="@string/label_company" />

                <TextView
                    android:id="@+id/et_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_company"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:padding="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGreyLight"
                    android:textStyle="bold" />

                <View
                    style="@style/horizontal_line"
                    android:layout_below="@+id/et_company"
                    android:layout_marginTop="@dimen/distance_6dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/distance_4dp">

                <TextView
                    android:id="@+id/tv_album"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/distance_8dp"
                    android:text="@string/label_albums_list" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_album"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_album"
                    android:orientation="vertical" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>